[tool.poetry]
name = "project_12.1.3"
version = "0.1.0"
description = ""
authors = ["artemij rilev <artik200050@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2024.1"
Django = "4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
